# amico_gh_actions

./: .cirrus.yml  .gitattributes  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_config.py  setup_site.py  site.cfg
.github/: dependabot.yml
.github/workflows/: aarch64.yml  build_linux_noob.yml  build_linux_wheels.yml  build_macos_noob.yml  build_macos_wheels.yml  build_wheels.yml  build_windows_wheels.yml  compile_OpenBLAS_linux.yml  compile_OpenBLAS_macos.yml  compile_ob_linux.yml  compile_ob_macos.yml  compile_openblas_linux.yml  compile_openblas_macos_x86_64.yml  dowload_macos_arm64.yml  linux_wheels.yml  linux_wheels_new.yml  macos_arm64_wheels.yml  macos_wheels.yml  macos_wheels_new.yml  new_build_wheels.yml  test.yml  test_qemu.yml  test_wheels.yml  test_windows.yml  win32.yml  windows_wheels.yml  windows_wheels_new.yml
amico/: __init__.py  core.py  info.py  lut.pxd  lut.pyx  models.pyx  solvers.h  util.py  wrappers.h
docs/: credits.md  installation.md
docs/docs/: index.md  installation.md
download/: download_list.md  nightfriend.md  package  package.md
include/nnls/: nnls.h
nnls/: nnls.h  nnls2.h
test/: noddi.py  sandi.py
