[build-system]
requires = [
    "setuptools>=59.6.0",
    "Cython>=0.29.33",
    "cyspams @ git+https://github.com/getspams/spams-cython.git@test_cp36"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python -m pip install -U pip && pip list && pip show nightfriend -v && python {project}/test/noddi.py"
test-skip = "*-win32 cp38-macosx_arm64 *-manylinux_aarch64"
build-verbosity = 3
