[metadata]
name = dmri-amico
version = 2.0.0
url = https://github.com/daducci/AMICO
download_url = https://pypi.org/project/dmri-amico
project_urls =
    Homepage = https://github.com/daducci/AMICO
    Documentation = https://github.com/daducci/AMICO/wiki
    Source = https://github.com/daducci/AMICO
    Changelog = https://github.com/daducci/AMICO/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/dmri-amico
    Tracker = https://github.com/daducci/AMICO/issues
author = Alessandro Daducci
author_email = alessandro.daducci@univr.it
maintainer = Alessandro Daducci
maintainer_email = alessandro.daducci@univr.it
classifiers = 
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python
    Programming Language :: Cython
license = BSD 3-Clause License
license_files = LICENSE
description = Accelerated Microstructure Imaging via Convex Optimization (AMICO)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Neuroimaging
    Diffusion MRI
    Microstructure Imaging
    Convex Optimization
    NODDI
    SANDI
platforms =
    Windows
    MacOS
    Linux

[options]
install_requires =
    numpy >=1.12, <=1.19.5; python_version<"3.7"
    numpy >=1.12; python_version>="3.7"
    scipy >=1.0, <=1.5.4; python_version<"3.7"
    scipy >=1.0; python_version>="3.7"
    dipy >=1.0, <=1.4.1; python_version<"3.7"
    dipy >=1.0; python_version>="3.7"
    tqdm
    joblib
    threadpoolctl
    importlib-metadata; python_version<"3.8"
python_requires = >=3.6
packages = amico
include_package_data = False

[options.package_data]
amico = directions/*.bin
